fix gap section partner

--- a/styles/components/_partner.scss
+++ b/styles/components/_partner.scss
@@ -1,5 +1,4 @@
 .partner {
-
     height: 541px;
     margin-top: 130px;
     background: $light-purple;
@@ -8,7 +7,7 @@
     &-container {
         display: flex;
         justify-content: space-between;
-        gap: 28px;
+        gap: 27px;
     }
 
     &-left {
@@ -80,6 +79,7 @@
     }
 
     &-info-item {
+        width: 509px;
         display: flex;
         margin-bottom: 30px;
     }
