--- a/styles/styles.css
+++ b/styles/styles.css
@@ -222,7 +222,7 @@ a {
 .partner-container {
   display: flex;
   justify-content: space-between;
-  gap: 28px;
+  gap: 27px;
 }
 
 .partner-left {
@@ -294,6 +294,7 @@ a {
 }
 
 .partner-info-item {
+  width: 509px;
   display: flex;
   margin-bottom: 30px;
 }
